--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
 
             <label for="menuItems">Selecciona los artículos del menú:</label>
             <select id="menuItems" name="menuItems" multiple required>
-                <option value="Tacos">Tacos</option>
-                <option value="Burritos">Burritos</option>
-                <option value="Quesadillas">Quesadillas</option>
-                <option value="Nachos">Nachos</option>
+                <option value="Tacos">Elote</option>
+                <option value="Burritos">Esquite</option>
+                <option value="Quesadillas">Maruchan</option>
+                <option value="Nachos">Azulito con piquete</option>
             </select>
 
             <button type="submit">Enviar Orden</button>
