--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Menú Elotecos</h1>
+        <h1>Menú de Elotecos</h1>
         <form id="orderForm">
             <label for="name">Nombre:</label>
             <input type="text" id="name" name="name" required>
@@ -18,11 +18,24 @@
 
             <label for="menuItems">Selecciona los artículos del menú:</label>
             <select id="menuItems" name="menuItems" multiple required>
-                <option value="Tacos">Elote</option>
-                <option value="Burritos">Esquite</option>
-                <option value="Quesadillas">Maruchan</option>
-                <option value="Nachos">Azulito con piquete</option>
+                <option value="Tacos" data-price="50">Tacos - $50</option>
+                <option value="Burritos" data-price="70">Burritos - $70</option>
+                <option value="Quesadillas" data-price="60">Quesadillas - $60</option>
+                <option value="Nachos" data-price="40">Nachos - $40</option>
+                <option value="Elote Loco" data-price="40" data-has-suboptions="true">Elote Loco - $40</option>
             </select>
+
+            <div id="subOptionsContainer" class="hidden">
+                <label for="subOptions">Selecciona la fritura:</label>
+                <select id="subOptions" name="subOptions" multiple>
+                    <option value="Takis">Takis</option>
+                    <option value="Chetos Flaming">Chetos Flaming</option>
+                    <option value="Doritos">Doritos</option>
+                    <option value="Ruffles">Ruffles</option>
+                </select>
+            </div>
+
+            <p>Total: $<span id="totalPrice">0</span></p>
 
             <button type="submit">Enviar Orden</button>
         </form>
