--- a/index.html
+++ b/index.html
@@ -37,6 +37,11 @@
                             <select id="subOptionsMaruchan1" class="sub-options-maruchan" name="subOptionsMaruchan1[]">
                                 <option value="Clásica">Clásica</option>
                                 <option value="Limón">Limón</option>
+                                <option value="Camaron">Camaron</option>
+                                <option value="Res">Res</option>
+                                <option value="Pollo">Pollo</option>
+                                <option value="Piquin">Piquin</option>
+                                <option value="Habanero">Habanero</option>
                             </select>
                         </div>
                         <div class="sub-option-group">
