--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Menu Elotecos</title>
     <link rel="stylesheet" href="styles.css">
-    <link rel="shortcut icon" href="logo_elotecos.png" type="image/x-icon">
+    <link rel="shortcut icon" href="Logo_Elotecos.png" type="image/x-icon">
 </head>
 <body>
     <div class="container">
