--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <div class="container">
+        <img src="Logo_Elotecos.PNG" alt="Los elotes más ricos :3">
         <h1>Menu Elotecos</h1>
         <form id="orderForm">
             <label for="name">Nombre:</label>
