--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
         <form id="orderForm">
             <label for="name">Nombre:</label>
             <input type="text" id="name" name="name" required>
+            <label for="contact">Número de contacto:</label>
+            <input type="text" id="contact" name="contact" required>
 
             <div id="productsContainer">
                 <div class="product">
