--- a/index.html
+++ b/index.html
@@ -3,68 +3,70 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Menu Elotecos</title>
+    <title>Menú Elotecos</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="shortcut icon" href="Logo_Elotecos.PNG" type="image/x-icon">
 </head>
 <body>
     <div class="container">
-        <img src="Logo_Elotecos.PNG" alt="Los elotes más ricos :3"width="80%">
-        <h1>Menu Elotecos</h1>
+        <h1>Menú Elotecos</h1>
         <form id="orderForm">
             <label for="name">Nombre:</label>
             <input type="text" id="name" name="name" required>
             <label for="contact">Número de contacto:</label>
             <input type="text" id="contact" name="contact" required>
-
             <div id="productsContainer">
                 <div class="product">
                     <label for="product1">Selecciona un producto:</label>
                     <select id="product1" class="product-select" name="products[]" required>
                         <option value="" disabled selected>Selecciona un producto</option>
-                        <option value="Maruchan Suadero o Pastor" data-price="80">Maruchan Suadero o Pastor - $80</option>
-                        <option value="Papas Locas" data-price="55">Papas Locas - $55</option>
+                        <!-- Elotes -->
+                        <option value="Elote Natural" data-price="25">Elote Natural - $25</option>
+                        <option value="Elote Clásico" data-price="30">Elote Clásico - $30</option>
+                        <option value="Elote Loco" data-price="40" data-has-suboptions="true">Elote Loco - $40</option>
+                        <option value="Elote Volcano" data-price="50">Elote Volcano - $50</option>
+                        <option value="Papalote" data-price="55" data-has-suboptions="true">Papalote - $55</option>
+                        <option value="Charola Eloteco Clásico" data-price="75" data-has-suboptions="true">Charola Eloteco Clásico - $75</option>
+                        <option value="Charola Eloteco Loco" data-price="80" data-has-suboptions="true">Charola Eloteco Loco - $80</option>
+                        <!-- Esquites -->
+                        <option value="Doriesquite" data-price="50">Doriesquite - $50</option>
+                        <option value="Tostiesquite" data-price="50">Tostiesquite - $50</option>
+                        <option value="Esquite Natural Chico" data-price="25">Esquite Natural (Chico) - $25</option>
+                        <option value="Esquite Natural Grande" data-price="45">Esquite Natural (Grande) - $45</option>
+                        <option value="Esquite Clásico Chico" data-price="30">Esquite Clásico (Chico) - $30</option>
+                        <option value="Esquite Clásico Grande" data-price="50">Esquite Clásico (Grande) - $50</option>
+                        <option value="Esquite Loco Chico" data-price="40" data-has-suboptions="true">Esquite Loco (Chico) - $40</option>
+                        <option value="Esquite Loco Grande" data-price="60" data-has-suboptions="true">Esquite Loco (Grande) - $60</option>
+                        <option value="Papa esquite Chico" data-price="55" data-has-suboptions="true">Papa esquite (Chico) - $55</option>
+                        <option value="Papa esquite Grande" data-price="70" data-has-suboptions="true">Papa esquite (Grande) - $70</option>
+                        <option value="Papa esquite Volcano Chico" data-price="65" data-has-suboptions="true">Papa esquite Volcano (Chico) - $65</option>
+                        <option value="Papa esquite Volcano Grande" data-price="80" data-has-suboptions="true">Papa esquite Volcano (Grande) - $80</option>
+                        <option value="Esquite Suadero o Pastor Chico" data-price="55" data-has-suboptions="true">Esquite Suadero o Pastor (Chico) - $55</option>
+                        <option value="Esquite Suadero o Pastor Grande" data-price="75" data-has-suboptions="true">Esquite Suadero o Pastor (Grande) - $75</option>
+                        <option value="Esquites Cambray Chico" data-price="50">Esquites Cambray (Chico) - $50</option>
+                        <option value="Esquites Cambray Grande" data-price="70">Esquites Cambray (Grande) - $70</option>
+                        <!-- Maruchan con Esquite -->
+                        <option value="Maruchan Clásica" data-price="55">Maruchan Clásica - $55</option>
+                        <option value="Maruchan esquite y fritura" data-price="60" data-has-suboptions="true">Maruchan esquite y fritura - $60</option>
+                        <option value="Esquisopa loca" data-price="75" data-has-suboptions="true">Esquisopa loca - $75</option>
+                        <option value="Maruchan Suadero o Pastor" data-price="80" data-has-suboptions="true">Maruchan Suadero o Pastor - $80</option>
+                        <!-- Snacks -->
+                        <option value="Papas Locas" data-price="55" data-has-suboptions="true">Papas Locas - $55</option>
                         <option value="Nachos Sencillos" data-price="50">Nachos Sencillos - $50</option>
-                        <option value="Nachos con suadero / pastor" data-price="70">Nachos con suadero / pastor - $70</option>
+                        <option value="Nachos con suadero o pastor" data-price="70" data-has-suboptions="true">Nachos con suadero o pastor - $70</option>
                         <option value="Nachos con chilli" data-price="75">Nachos con chilli - $75</option>
-                        <option value="Esquite Natural" data-price="25">Esquite Natural (Chico) - $25</option>
-                        <option value="Esquite Clásico" data-price="30">Esquite Clásico (Chico) - $30</option>
-                        <option value="Esquite Loco" data-price="40" data-has-suboptions="true">Esquite Loco (Chico) - $40</option>
-                        <option value="Esquisopa Loca" data-price="75" data-has-suboptions="true">Esquisopa Loca - $75</option>
-                        <!-- Agrega los demás productos aquí -->
+                        <!-- Drinks -->
+                        <option value="Vaso Preparado" data-price="45">Vaso Preparado - $45</option>
+                        <option value="Pati Bañera" data-price="80">Pati Bañera - $80</option>
+                        <option value="Arizona Loco" data-price="70" data-has-suboptions="true">Arizona Loco - $70</option>
+                        <option value="Clamateco" data-price="50">Clamateco - $50</option>
+                        <option value="Coca cola" data-price="25">Coca cola (600 ml) - $25</option>
+                        <option value="Arizona" data-price="25" data-has-suboptions="true">Arizona (680 ml) - $25</option>
+                        <option value="Boing" data-price="20" data-has-suboptions="true">Boing (500 ml) - $20</option>
+                        <option value="Agua Natural" data-price="15">Agua Natural (600 ml) - $15</option>
                     </select>
 
-                    <div class="subOptionsContainer hidden">
-                        <label for="subOptions1">Selecciona las opciones:</label>
-                        <div class="sub-option-group">
-                            <label>Maruchan:</label>
-                            <select id="subOptionsMaruchan1" class="sub-options-maruchan" name="subOptionsMaruchan1[]">
-                                <option value="Clásica">Clásica</option>
-                                <option value="Limón">Limón</option>
-                                <option value="Camaron">Camaron</option>
-                                <option value="Res">Res</option>
-                                <option value="Pollo">Pollo</option>
-                                <option value="Piquin">Piquin</option>
-                                <option value="Habanero">Habanero</option>
-                            </select>
-                        </div>
-                        <div class="sub-option-group">
-                            <label>Fritura:</label>
-                            <select id="subOptionsFritura1" class="sub-options-fritura" name="subOptionsFritura1[]">
-                                <option value="Takis">Takis</option>
-                                <option value="Chetos Flaming">Chetos Flaming</option>
-                                <option value="Doritos">Doritos</option>
-                                <option value="Ruffles">Ruffles</option>
-                            </select>
-                        </div>
-                        <div class="sub-option-group">
-                            <label>Bolsa de Papas:</label>
-                            <select id="subOptionsPapas1" class="sub-options-papas" name="subOptionsPapas1[]">
-                                <option value="Sabritas">Sabritas</option>
-                                <option value="Ruffles">Ruffles</option>
-                            </select>
-                        </div>
-                    </div>
+                    <div class="subOptionsContainer hidden"></div>
                 </div>
             </div>
 
