--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="container">
-        <img src="Logo_Elotecos.PNG" alt='Elotecos las Américas' width='50%' align='center'/>
+        <img src="Logo_Elotecos.PNG" alt='Elotecos las Américas' width='50%'/>
         <h1>Menú Elotecos</h1>
         <form id="orderForm">
             <label for="name">Nombre:</label>
