--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 </head>
 <body>
     <div class="container">
-        <img src="Logo_Elotecos.PNG" alt='Elotecos las Américas' width='50%'/>
+        <div class="imagen-container">
+            <img src="Logo_Elotecos.PNG" alt='Elotecos las Américas' width='50%'/>
+        </div>
         <h1>Menú Elotecos</h1>
         <form id="orderForm">
             <label for="name">Nombre:</label>
