--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
         <div class="imagen-container">
             <img src="Logo_Elotecos.PNG" alt='Elotecos las Américas' width='50%'/>
         </div>
+        <div class="imagen-container">
+            <img src="Logo_Elotecos.PNG" alt='Elotecos las Américas' width='50%'/>
+        </div>
         <h1>Menú Elotecos</h1>
         <form id="orderForm">
             <label for="name">Nombre:</label>
