--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Menú Elotecos</title>
+    <title>Pedidos Elotecos</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="shortcut icon" href="Logo_Elotecos.PNG" type="image/x-icon">
 </head>
 <body>
     <div class="container">
-        <h1>Menú Elotecos</h1>
+        <h1>Pedidos Elotecos</h1>
         <form id="orderForm">
             <label for="name">Nombre:</label>
             <input type="text" id="name" name="name" required>
